@@ -200,6 +200,8 @@ public class MemberServiceImpl implements MemberService{
         }
     }
 
+
+
     // 개인정보 조회 API
     @Override
     public ResponseEntity<ApiResponse> getProfile(CustomUserPrincipal userPrincipal) {
@@ -214,7 +216,6 @@ public class MemberServiceImpl implements MemberService{
                 )
         );
     }
-
 
     @Override
     @Transactional
@@ -310,25 +311,34 @@ public class MemberServiceImpl implements MemberService{
             throw new GeneralException(ErrorStatus.INVALID_CATEGORY);
         }
 
-        // 요청된 키워드 조회 및 검증 (한 번만 조회)
+        // 카테고리-키워드 맵핑 검증
         List<Keywords> keywords = keywordsRepository.findAllById(request.getKeywords());
-
-        // 존재하지 않는 키워드가 있는지 확인
-        if (keywords.size() != request.getKeywords().size()) {
-            throw new GeneralException(ErrorStatus.NOT_EXISTS_KEYWORD);
-        }
-
-        // 요청된 키워드가 모두 해당 카테고리에 속하는지 확인
-        Set<String> keywordCategories = keywords.stream().map(Keywords::getCategory).collect(Collectors.toSet());
-        if (keywordCategories.size() != 1 || !keywordCategories.contains(category)) {
+        if (!keywords.stream().allMatch(keyword -> category.equals(keyword.getCategory()))) {
             throw new GeneralException(ErrorStatus.INVALID_IDENTITY_MAPPING);
         }
 
+        // 요청된 키워드 ID를 가져옵니다.
+        List<Integer> requestedKeywordIds = request.getKeywords();
+
+        // 데이터베이스에서 해당 카테고리에 속하는 모든 키워드 ID를 조회합니다.
+        List<Integer> validKeywordIds = keywordsRepository.findAllByCategory(request.getCategory()).stream()
+                .map(Keywords::getKeywordId)
+                .collect(Collectors.toList());
+
+        // 요청된 키워드 ID 중에서 존재하지 않는 키워드 ID를 필터링합니다.
+        List<Integer> invalidKeywordIds = requestedKeywordIds.stream()
+                .filter(keywordId -> !validKeywordIds.contains(keywordId))
+                .collect(Collectors.toList());
+
+        // 존재하지 않는 키워드가 있다면 에러를 throw 합니다.
+        if (!invalidKeywordIds.isEmpty()) {
+            throw new GeneralException(ErrorStatus.NOT_EXISTS_KEYWORD);
+        }
 
         List<MemberKeyword> existingMemberKeywords = memberKeywordRepository.findByMember_MemberIdAndKeywordCategory(member.getMemberId(), request.getCategory());
         List<Integer> existingKeywordIds = existingMemberKeywords.stream()
                 .map(memberKeyword -> memberKeyword.getKeyword().getKeywordId())
-                .toList();
+                .collect(Collectors.toList());
 
         // 이전 키워드와 비교하여 동일한지 확인
         if (new HashSet<>(existingKeywordIds).equals(new HashSet<>(request.getKeywords()))) {
